gcc/testsuite/g++.dg/cpp0x/ref-qual10.C
// PR c++/57252
// { dg-require-effective-target c++11 }

struct foo {
  void bar() & {}
  void bar() && {}
};

int main()
{
  auto p = &foo::bar;		// { dg-error "" }
  (foo{}.*p)();
}
